--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="facebook_app_id">670008216764350</string>
+    <string name="facebook_login_protocol_scheme">fb670008216764350</string>
     <string name="app_name">☺►♫</string>
     <string name="game">GameStart</string>
     <string name="gamefirstexr">First exercise</string>
